--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="nl">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Marokkaanse Moskee Houthalen</title>
+    <title>Islamitische Moskee Houthalen</title>
   </head>
   <body class="bg-[#0b0b0b] text-zinc-100">
     <div id="root"></div>
