Added verification for google

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="stXLl8p5XBA8QBTAvTSUGKx8UA7b_J5Bz4n3nmN3gE4" />
     <title>Islamitische Moskee Houthalen</title>
   </head>
   <body class="bg-[#0b0b0b] text-zinc-100">
